--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,17 @@
 .p-datepicker {
   background-color: #f0ebeb;
 }
+
+#picker .p-inputtext {
+  text-align: center;
+  font-size: 30px !important;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#picker2 .p-inputtext {
+  font-size: 15px !important;
+  text-align: center;
+}
+
+#checkbox {
+  accent-color: white;
+}
